[package]
name = "cork"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = "2.34"
ctrlc = "3.2"
regex = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.17.0"
rustls = "0.21"
rustls-pemfile = "1.0"
crossbeam-channel = "0.5"
webpki-roots = "0.25"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
